Ponca changelog



--------------------------------------------------------------------------------
Current head (v.1.2 RC)

- Examples
    - Fix example cuda/ponca_ssgls (#109)

--------------------------------------------------------------------------------
v.1.1 RC
This release improves the Spatial Partitioning Package with new features and
improved doc, as well as several bug fixes and API improvements.

- API
    - [spatialPartitioning] Add kd-tree traits type (#80)
    - [spatialPartitioning] Add knn-graphs (#101)
    - [fitting] Add Primitive::getNumNeighbors (#86)
    - [fitting] Add Primitive::getWeightFunc (#99)
    - [fitting] Change naming convention and rational for principal curvatures in CurvatureEstimatorBase (#94)
    - [fitting] Add class MeanNormalDer to compute derivatives of the mean normal vector (#78)

- Bug-fixes and code improvements
    - [spatialPartitioning] Fix unwanted function hiding with DryFit::setWeightFunc (#86)
    - [spatialPartitioning] Fix missing include directive in kdTreeTraits.h (#92)
    - [spatialPartitioning] Fix duplicated code in KdTree queries (see issue #47) (#88)
    - [fitting] Fix a potential bug when using multi-pass fitting (#89)
    - [fitting] Fix a bug in CovarianceFit (#93)
    - [fitting] Remove deadcode in Basket (#86)
    - [fitting] Fix a bug in dtau computation for scale-only derivation (#98)
    - [fitting] Fix a bug in MlsSphereFitDer weight derivatives (#97)
    - [ci] Fix Compiler is out of heap space error on Github (MSVC), by splitting tests (#87)

- Tests
    - Fix WeightKernel test (failing on windows due to finite differences) (#91)

-Docs
    - [spatialPartitioning] Update module page with a minimal doc and examples (#86, #92)
    - [spatialPartitioning] Add NanoFlann example (#86)
    - [fitting] Update documentation of AlgebraicSphere::changeBasis (#99)

--------------------------------------------------------------------------------
v.1.0