@@ -8,6 +8,9 @@ Current head (v.1.2 RC)
 - Examples
     - Fix example cuda/ponca_ssgls (#109)
 
+- Bug-fixes and code improvements
+    - [fitting] Use variadic template for basket extensions (#85)
+
 --------------------------------------------------------------------------------
 v.1.1 RC
 This release improves the Spatial Partitioning Package with new features and
